tests/ui/traits/const-traits/std-impl-gate.stock.stderr
error[E0658]: cannot call conditionally-const associated function `<Vec<usize> as Default>::default` in constant functions
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
